--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
@@ -9,7 +9,7 @@
         <div class="Container100">
             <div class="ContainerIndent Responsive100 tab_main">
 
-                <p:steps id="progressbar" activeIndex="#{tcmpb.pagemanager.page}">
+                <p:steps id="progressbar" styleClass="portfolioCreationStepsPanel" activeIndex="#{tcmpb.pagemanager.page}">
                     <p:menuitem value="Start"/>
                     <p:menuitem value="Objective"/>
                     <p:menuitem value="Risk"/>
